----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-05-02 Garvin Hicking <me@supergarv.de>
    * css/phpmyadmin.css.php3: Small typo, seems to be
      solution of support request #728820
    * Documentation.html: Enhance FAQ 2.3 (mysql.sock readable,
      thanks to Ryan)

2003-04-30 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_schema.php3, bug 729517, better comment output,
      thanks to Maxime Delorme

2003-04-30 Michal Cihar  <nijel@users.sourceforge.net>
    * tbl_move_copy.php3: Better fix for #729416 (use INSERT IGNORE).

2003-04-29 Michal Cihar  <nijel@users.sourceforge.net>
    * server_privileges.php3: No need to escape wild characters here.

2003-04-29 Garvin Hicking <me@supergarv.de>
    * tbl_move_copy.php3: Bug #729416
    * tbl_query_box.php3, queryframe.php3: Bug #729446, maybe #728571
    * index.php3: Typo    
    * db_details_structure.php3: Prevent uninitialized variable

2003-04-28 Garvin Hicking <me@supergarv.de>
    * index.php3, queryframe.php3, tbl_query_box.php3, querywindow.php3:
      Even more issues when QueryFrameJS is set to true, but JS is not
      activated. Haven't ever thought this would be necessary. ;)
      I tested everything with QueryFrame/QueryFrameJS set to true/false
      with and without JavaScript enabled, and got everything working.
      Please verify for yourselves! :)

2003-04-28 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/polish: update, thanks to Jakub Wilk

2003-04-28 Michal Cihar  <nijel@users.sourceforge.net>
    * tbl_query_box.php3: Partial fix for #728935 (can not submit SQL without
      javascript). But there are still problems without javascript.

2003-04-27 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.5.0-rc2 released

2003-04-25 Michal Cihar  <nijel@users.sourceforge.net>
    * lang/estonian: Updated, thanks to finsoft@sourceforge.net.
    * lang/norwegian: Updated, thanks to Sven-Erik Andersen (sven-erik).